2005-11-09  Scott Oonk  <scott.oonk@gmail.com>

	* src/register/register-gnome/gnucash-item-edit.[ch]: This patch
	simplifies the mouse selection logic in gnucash-item-edit.  It
	also fixes a problem where selection with the mouse does not work
	correctly if you start draging in one direction, then drag back
	over the original start point.

2005-11-09  Christian Stimming  <stimming@tuhh.de>

	* macros/autogen.sh: Remove the automatic call to ./configure from
	autogen.sh; instead, only print a reminder that from now on,
	./configure has to be called separately.

	* po/cs.po, po/glossary/pt_BR.po, po/ca.po, po/tr.po: Merge
	language files from branches/1.8 so that all languages are now
	available in HEAD.

2005-11-07  Christian Stimming  <stimming@tuhh.de>

	* configure.in: Remove AM_MAINTAINER_MODE since this causes only
	problems anyway. From now on the build system always behaves as if
	--enable-maintainer-mode had been specified. This makes all
	related errors vanish.

	* macros/autogen.sh: Clean up autogen script a bit, but leave the
	functionality unchanged.

	* po/ne.po: Add Nepali translation by Pawan Chitrakar
	<pchitrakar@gmail.com>.

2005-11-07  Neil Williams <linux@codehelp.co.uk>

	* src/engine/gnc-budget.c : Remove unnecessary
	private headers.

2005-11-07  Neil Williams <linux@codehelp.co.uk>

	* Makefile.am : remove distcleancheck1.5-is-stupid
	workaround.

2005-11-06  David Hampton  <hampton@employees.org>

	* src/import-export/hbci/gnc-plugin-hbci.c:
	* src/report/stylesheets/gnc-plugin-stylesheets.c:
	* src/gnome-utils/gnc-plugin-page.[ch]: Change function name to
	disambiguate between retrieving the name of a page and the name of
	the plugin that provides the page.

2005-11-06  Neil Williams <linux@codehelp.co.uk>

	* src/engine/Makefile.am : qofla-dir.h is not
	for distribution, qofla-dir.h.in is used instead.

2005-11-06  Christian Stimming  <stimming@tuhh.de>

	* autogen.sh: Revert autogen.sh simplificatoin for now; to be